--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
+    "@types/passport-jwt": "^3.0.6",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "eslint": "~8.15.0",
